20030930 ChangeLog, README: put in release date for 0.2.0.1
	 (libspectrum_0_2_0-bugfix-branch).
20031001 ChangeLog, Makefile.am, README, configure.in, rzx.c: port the
	 0.2.0.1 release changes back to HEAD.
20031003 make-perl.c: change GcryMPI to gcry_mpi_t.
20031006 crypto.c, rzx.c: use gcrypt errors properly; most importantly in
	 crypto.c:libspectrum_verify_signature, we have to ignore the
	 error source before comparing with an error code.
20031006 z80.c: actually allocate memory for the .slt pages; thanks to
	 Alberto Garcia for reporting this.
20031009 creator.c, libspectrum.h.in, rzx.c, szx.c: add support for
	 writing custom data in the creator blocks.
20031013 libspectrum.c, libspectrum.h.in: add routines to check
	 libspectrum's version.
20031013 libspectrum.c, libspectrum.h.in: add routines to get the version
	 of libgcrypt in use.
20031014 .cvsignore, configure.in, libspectrum.qpg.in: add QNX package
	 file (thanks, Mike Gorchak).
20031014 configure.in, libspectrum.c, rzx.c: we need <strings.h> for
	 strcasecmp() on QNX6 (thanks, Mike Gorchak).
20031016 libspectrum.h.in, make-perl.c, tape.c: don't include <glib.h>
	 in libspectrum.h; makes it easy to include from other projects.
20031017 rzx.c: write RZX version number as 0.12 (as opposed to 0.13) if
	 we're not signing the data.
20031019 Transparent reading of gzipped files.
20031019 libspectrum.c: better chance of compiling if zlib not available.
20031020 Transparent reading of bzipped files.
20031030 zlib.c: use the 'normal' zlib interface to decompress gzipped
	 files rather than the gz* functions.
20031030 zlib.c: merge duplicated code from libspectrum_zlib_inflate and
	 libspectrum_gzip_inflate.
20031103 tape.c: don't explicitly include <glib.h> (thanks, Erik Kunze).
20031103 README: small change to the installation instructions.
20031107 accessor.pl, snap_accessors.txt, szx.c, z80.c: add support for
	 the 'last instruction EI' flag.
20031127 A bunch of --enable-warnings tidy-ups.